--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="apple-touch-icon" href="/icons/icon-192.png" />
     <link rel="manifest" href="/manifest.webmanifest" />
+    <script src="https://at.alicdn.com/t/c/font_5050500_7tjo2zltcao.js"></script>
     <title>ChromaChat Phone</title>
   </head>
   <body class="bg-slate-950 text-white">
